--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ kitty-specs/**/tasks/*.md
 
 # Generated PDF brochures (output of generate_pdf.py)
 spec-kitty-capabilities.pdf
+
+# Nix results
+result
